Mesh Tools - Noise Button Crashes #51637

Closed
opened 2017-05-26 20:38:18 +02:00 by Jeff H · 4 comments

System Information
Windows 10
GTX 980 Ti

Blender Version
2.78c (official release)

Short description of error
Pressing the "Noise" button crashes blender

Exact steps for others to reproduce the error
1 Open the blend file (There should be a vertex pre-selected)
2 Press the "Noise" button (Tool shelf > Mesh Tools > Deform > Noise)
3 Blender should instantly crash Noise Bug.blend

Note:
I could not get this to happen on any other mesh, but i did test on a few other computers with consistent results

**System Information** Windows 10 GTX 980 Ti **Blender Version** 2.78c (official release) **Short description of error** Pressing the "Noise" button crashes blender **Exact steps for others to reproduce the error** 1 Open the blend file (There should be a vertex pre-selected) 2 Press the "Noise" button (Tool shelf > Mesh Tools > Deform > Noise) 3 Blender should instantly crash [Noise Bug.blend](https://archive.blender.org/developer/F610109/Noise_Bug.blend) Note: I could not get this to happen on any other mesh, but i did test on a few other computers with consistent results
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @gun4hire

Added subscriber: @gun4hire

This issue was referenced by 275e2fb0ff

This issue was referenced by 275e2fb0ff6e62b462cf8d56f167d128da7bb27a
Bastien Montagne self-assigned this 2017-05-27 14:47:23 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51637
No description provided.