Fix T51637: Mesh Tools - Noise Button Crashes.

Logic behind which mtext to use from material was broken here... Though
ultimately that whole tool could probably be deprecated or reworked!